--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "starter-kit",
   "version": "1.0.0",
   "description": "A template for creating websites.",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "request": "^2.88.0"
   }
